Use PodRef more widely in model and reconciler classes
Signed-off-by: Jakub Scholz <www@scholzj.com>