@@ -4,31 +4,6 @@
  */
 package io.strimzi.operator.cluster.operator.resource;
 
-import java.io.IOException;
-import java.net.InetSocketAddress;
-import java.net.Socket;
-import java.time.Duration;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.Optional;
-import java.util.Set;
-import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.ExecutionException;
-import java.util.concurrent.Executors;
-import java.util.concurrent.ScheduledExecutorService;
-import java.util.concurrent.TimeUnit;
-import java.util.concurrent.TimeoutException;
-import java.util.function.Function;
-import java.util.function.Supplier;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
-
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import io.fabric8.kubernetes.api.model.ContainerStateWaiting;
 import io.fabric8.kubernetes.api.model.ContainerStatus;
@@ -39,14 +14,14 @@ import io.strimzi.api.kafka.model.KafkaResources;
 import io.strimzi.operator.cluster.model.DnsNameGenerator;
 import io.strimzi.operator.cluster.model.KafkaCluster;
 import io.strimzi.operator.cluster.model.KafkaVersion;
-import io.strimzi.operator.cluster.model.ModelUtils;
+import io.strimzi.operator.cluster.model.NodeRef;
 import io.strimzi.operator.cluster.model.RestartReason;
 import io.strimzi.operator.cluster.model.RestartReasons;
 import io.strimzi.operator.cluster.operator.resource.events.KubernetesRestartEventPublisher;
 import io.strimzi.operator.common.AdminClientProvider;
 import io.strimzi.operator.common.BackOff;
-import io.strimzi.operator.common.ReconciliationLogger;
 import io.strimzi.operator.common.Reconciliation;
+import io.strimzi.operator.common.ReconciliationLogger;
 import io.strimzi.operator.common.Util;
 import io.strimzi.operator.common.operator.resource.PodOperator;
 import io.vertx.core.CompositeFuture;
@@ -64,6 +39,29 @@ import org.apache.kafka.common.Node;
 import org.apache.kafka.common.config.ConfigException;
 import org.apache.kafka.common.config.ConfigResource;
 import org.apache.kafka.common.errors.SslAuthenticationException;
+
+import java.io.IOException;
+import java.net.InetSocketAddress;
+import java.net.Socket;
+import java.time.Duration;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.Set;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ExecutionException;
+import java.util.concurrent.Executors;
+import java.util.concurrent.ScheduledExecutorService;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.TimeoutException;
+import java.util.function.Function;
+import java.util.function.Supplier;
+import java.util.stream.Collectors;
 
 import static java.util.Collections.singletonList;
 
@@ -117,7 +115,7 @@ public class KafkaRoller {
     private final String cluster;
     private final Secret clusterCaCertSecret;
     private final Secret coKeySecret;
-    private final List<String> podList;
+    private final List<NodeRef> nodes;
     private final KubernetesRestartEventPublisher eventsPublisher;
     private final Supplier<BackOff> backoffSupplier;
     protected String namespace;
@@ -138,7 +136,7 @@ public class KafkaRoller {
      * @param pollingIntervalMs     Polling interval in milliseconds
      * @param operationTimeoutMs    Operation timeout in milliseconds
      * @param backOffSupplier       Backoff supplier
-     * @param podList               List of Kafka pods
+     * @param nodes                 List of Kafka node references
      * @param clusterCaCertSecret   Secret with the Cluster CA public key
      * @param coKeySecret           Secret with the Cluster CA private key
      * @param adminClientProvider   Kafka Admin client provider
@@ -149,15 +147,15 @@ public class KafkaRoller {
      * @param eventsPublisher       Kubernetes Events publisher for publishing events about pod restarts
      */
     public KafkaRoller(Reconciliation reconciliation, Vertx vertx, PodOperator podOperations,
-                       long pollingIntervalMs, long operationTimeoutMs, Supplier<BackOff> backOffSupplier, List<String> podList,
+                       long pollingIntervalMs, long operationTimeoutMs, Supplier<BackOff> backOffSupplier, List<NodeRef> nodes,
                        Secret clusterCaCertSecret, Secret coKeySecret,
                        AdminClientProvider adminClientProvider,
                        Function<Integer, String> kafkaConfigProvider, String kafkaLogging, KafkaVersion kafkaVersion, boolean allowReconfiguration, KubernetesRestartEventPublisher eventsPublisher) {
         this.namespace = reconciliation.namespace();
         this.cluster = reconciliation.name();
-        this.podList = podList;
+        this.nodes = nodes;
         this.eventsPublisher = eventsPublisher;
-        if (podList.size() != podList.stream().distinct().count()) {
+        if (nodes.size() != nodes.stream().distinct().count()) {
             throw new IllegalArgumentException();
         }
         this.backoffSupplier = backOffSupplier;
@@ -186,7 +184,7 @@ public class KafkaRoller {
     private final ScheduledExecutorService singleExecutor = Executors.newSingleThreadScheduledExecutor(
         runnable -> new Thread(runnable, "kafka-roller"));
 
-    private ConcurrentHashMap<String, RestartContext> podToContext = new ConcurrentHashMap<>();
+    private final ConcurrentHashMap<String, RestartContext> podToContext = new ConcurrentHashMap<>();
     private Function<Pod, RestartReasons> podNeedsRestart;
 
     /**
@@ -196,7 +194,7 @@ public class KafkaRoller {
     private boolean initAdminClient() {
         if (this.allClient == null) {
             try {
-                this.allClient = adminClient(IntStream.range(0, podList.size()).boxed().collect(Collectors.toList()), false);
+                this.allClient = adminClient(nodes, false);
             } catch (ForceableProblem | FatalProblem e) {
                 LOGGER.warnCr(reconciliation, "Failed to create adminClient.", e);
                 return false;
@@ -218,17 +216,20 @@ public class KafkaRoller {
         Promise<Void> result = Promise.promise();
         singleExecutor.submit(() -> {
             LOGGER.debugCr(reconciliation, "Verifying cluster pods are up-to-date.");
-            List<PodRef> pods = new ArrayList<>(podList.size());
+            List<NodeRef> pods = new ArrayList<>(nodes.size());
 
-            for (int podIndex = 0; podIndex < podList.size(); podIndex++) {
+            for (NodeRef node : nodes)  {
+            //for (int podIndex = 0; podIndex < nodes.size(); podIndex++) {
                 // Order the podNames unready first otherwise repeated reconciliations might each restart a pod
                 // only for it not to become ready and thus drive the cluster to a worse state.
-                pods.add(podOperations.isReady(namespace, podList.get(podIndex)) ? pods.size() : 0, new PodRef(podList.get(podIndex), ModelUtils.idOfPod(podList.get(podIndex))));
+                pods.add(podOperations.isReady(namespace, node.podName()) ? pods.size() : 0, node);
             }
             LOGGER.debugCr(reconciliation, "Initial order for updating pods (rolling restart or dynamic update) is {}", pods);
-            List<Future> futures = new ArrayList<>(podList.size());
-            for (PodRef podRef: pods) {
-                futures.add(schedule(podRef, 0, TimeUnit.MILLISECONDS));
+
+            @SuppressWarnings({ "rawtypes" }) // Composite future requires raw Future objects
+            List<Future> futures = new ArrayList<>(nodes.size());
+            for (NodeRef node : pods) {
+                futures.add(schedule(node, 0, TimeUnit.MILLISECONDS));
             }
             CompositeFuture.join(futures).onComplete(ar -> {
                 singleExecutor.shutdown();
@@ -291,25 +292,27 @@ public class KafkaRoller {
      * completed the returned Future when the pod is rolled.
      * When called multiple times with the same podId this method will return the same Future instance.
      * Pods will be rolled one-at-a-time so the delay may be overrun.
-     * @param podRef  The reference to pod to roll.
-     * @param delay The delay.
-     * @param unit The unit of the delay.
+     *
+     * @param nodeRef   The reference to pod to roll.
+     * @param delay     The delay.
+     * @param unit      The unit of the delay.
+     *
      * @return A future which completes when the pod has been rolled.
      */
-    private Future<Void> schedule(PodRef podRef, long delay, TimeUnit unit) {
-        RestartContext ctx = podToContext.computeIfAbsent(podRef.getPodName(),
+    private Future<Void> schedule(NodeRef nodeRef, long delay, TimeUnit unit) {
+        RestartContext ctx = podToContext.computeIfAbsent(nodeRef.podName(),
             k -> new RestartContext(backoffSupplier));
         singleExecutor.schedule(() -> {
-            LOGGER.debugCr(reconciliation, "Considering updating pod {} after a delay of {} {}", podRef, delay, unit);
+            LOGGER.debugCr(reconciliation, "Considering updating pod {} after a delay of {} {}", nodeRef, delay, unit);
             try {
-                restartIfNecessary(podRef, ctx);
+                restartIfNecessary(nodeRef, ctx);
                 ctx.promise.complete();
             } catch (InterruptedException e) {
                 // Let the executor deal with interruption.
                 Thread.currentThread().interrupt();
             } catch (FatalProblem e) {
                 LOGGER.infoCr(reconciliation, "Could not verify pod {} is up-to-date, giving up after {} attempts. Total delay between attempts {}ms",
-                        podRef, ctx.backOff.maxAttempts(), ctx.backOff.totalDelayMs(), e);
+                        nodeRef, ctx.backOff.maxAttempts(), ctx.backOff.totalDelayMs(), e);
                 ctx.promise.fail(e);
                 singleExecutor.shutdownNow();
                 podToContext.forEachValue(Integer.MAX_VALUE, f -> {
@@ -318,15 +321,15 @@ public class KafkaRoller {
             } catch (Exception e) {
                 if (ctx.backOff.done()) {
                     LOGGER.infoCr(reconciliation, "Could not verify pod {} is up-to-date, giving up after {} attempts. Total delay between attempts {}ms",
-                            podRef, ctx.backOff.maxAttempts(), ctx.backOff.totalDelayMs(), e);
+                            nodeRef, ctx.backOff.maxAttempts(), ctx.backOff.totalDelayMs(), e);
                     ctx.promise.fail(e instanceof TimeoutException ?
                             new io.strimzi.operator.common.operator.resource.TimeoutException() :
                             e);
                 } else {
                     long delay1 = ctx.backOff.delayMs();
                     LOGGER.infoCr(reconciliation, "Will temporarily skip verifying pod {} is up-to-date due to {}, retrying after at least {}ms",
-                            podRef, e, delay1);
-                    schedule(podRef, delay1, TimeUnit.MILLISECONDS);
+                            nodeRef, e, delay1);
+                    schedule(nodeRef, delay1, TimeUnit.MILLISECONDS);
                 }
             }
         }, delay, unit);
@@ -336,66 +339,68 @@ public class KafkaRoller {
     /**
      * Restart the given pod now if necessary according to {@link #podNeedsRestart}.
      * This method blocks.
-     * @param podRef Reference of pod to roll.
-     * @param restartContext
-     * @throws InterruptedException Interrupted while waiting.
-     * @throws ForceableProblem Some error. Not thrown when finalAttempt==true.
-     * @throws UnforceableProblem Some error, still thrown when finalAttempt==true.
+     *
+     * @param nodeRef           Reference of pod to roll.
+     * @param restartContext    Restart context
+     *
+     * @throws InterruptedException     Interrupted while waiting.
+     * @throws ForceableProblem         Some error. Not thrown when finalAttempt==true.
+     * @throws UnforceableProblem       Some error, still thrown when finalAttempt==true.
      */
     @SuppressFBWarnings("RCN_REDUNDANT_NULLCHECK_OF_NONNULL_VALUE")
     @SuppressWarnings({"checkstyle:CyclomaticComplexity"})
-    private void restartIfNecessary(PodRef podRef, RestartContext restartContext)
+    private void restartIfNecessary(NodeRef nodeRef, RestartContext restartContext)
             throws Exception {
         Pod pod;
         try {
-            pod = podOperations.get(namespace, podRef.getPodName());
+            pod = podOperations.get(namespace, nodeRef.podName());
             if (pod == null) {
-                LOGGER.debugCr(reconciliation, "Pod {} doesn't exist. There seems to be some problem with the creation of pod by StrimziPodSets controller", podRef.getPodName());
+                LOGGER.debugCr(reconciliation, "Pod {} doesn't exist. There seems to be some problem with the creation of pod by StrimziPodSets controller", nodeRef.podName());
                 return;
             }
         } catch (KubernetesClientException e) {
-            throw new UnforceableProblem("Error getting pod " + podRef.getPodName(), e);
+            throw new UnforceableProblem("Error getting pod " + nodeRef.podName(), e);
         }
 
         restartContext.restartReasons = podNeedsRestart.apply(pod);
 
         try {
-            checkReconfigurability(podRef, pod, restartContext);
+            checkReconfigurability(nodeRef, pod, restartContext);
             if (restartContext.forceRestart || restartContext.needsRestart || restartContext.needsReconfig) {
-                if (!restartContext.forceRestart && deferController(podRef, restartContext)) {
-                    LOGGER.debugCr(reconciliation, "Pod {} is controller and there are other pods to verify. Non-controller pods will be verified first.", podRef);
-                    throw new ForceableProblem("Pod " + podRef.getPodName() + " is controller and there are other pods to verify. Non-controller pods will be verified first");
+                if (!restartContext.forceRestart && deferController(nodeRef, restartContext)) {
+                    LOGGER.debugCr(reconciliation, "Pod {} is controller and there are other pods to verify. Non-controller pods will be verified first.", nodeRef);
+                    throw new ForceableProblem("Pod " + nodeRef.podName() + " is controller and there are other pods to verify. Non-controller pods will be verified first");
                 } else {
-                    if (restartContext.forceRestart || canRoll(podRef, 60_000, TimeUnit.MILLISECONDS, false, restartContext)) {
+                    if (restartContext.forceRestart || canRoll(nodeRef, 60_000, TimeUnit.MILLISECONDS, false, restartContext)) {
                         // Check for rollability before trying a dynamic update so that if the dynamic update fails we can go to a full restart
-                        if (restartContext.forceRestart || !maybeDynamicUpdateBrokerConfig(podRef, restartContext)) {
-                            LOGGER.debugCr(reconciliation, "Pod {} can be rolled now", podRef);
+                        if (restartContext.forceRestart || !maybeDynamicUpdateBrokerConfig(nodeRef, restartContext)) {
+                            LOGGER.debugCr(reconciliation, "Pod {} can be rolled now", nodeRef);
                             restartAndAwaitReadiness(pod, operationTimeoutMs, TimeUnit.MILLISECONDS, restartContext);
                         } else {
                             awaitReadiness(pod, operationTimeoutMs, TimeUnit.MILLISECONDS);
                         }
                     } else {
-                        LOGGER.debugCr(reconciliation, "Pod {} cannot be updated right now", podRef);
-                        throw new UnforceableProblem("Pod " + podRef.getPodName() + " cannot be updated right now.");
+                        LOGGER.debugCr(reconciliation, "Pod {} cannot be updated right now", nodeRef);
+                        throw new UnforceableProblem("Pod " + nodeRef.podName() + " cannot be updated right now.");
                     }
                 }
             } else {
                 // By testing even pods which don't need needsRestart for readiness we prevent successive reconciliations
                 // from taking out a pod each time (due, e.g. to a configuration error).
                 // We rely on Kube to try restarting such pods.
-                LOGGER.debugCr(reconciliation, "Pod {} does not need to be restarted", podRef);
-                LOGGER.debugCr(reconciliation, "Waiting for non-restarted pod {} to become ready", podRef);
-                await(isReady(namespace, podRef.getPodName()), operationTimeoutMs, TimeUnit.MILLISECONDS, e -> new FatalProblem("Error while waiting for non-restarted pod " + podRef.getPodName() + " to become ready", e));
-                LOGGER.debugCr(reconciliation, "Pod {} is now ready", podRef);
+                LOGGER.debugCr(reconciliation, "Pod {} does not need to be restarted", nodeRef);
+                LOGGER.debugCr(reconciliation, "Waiting for non-restarted pod {} to become ready", nodeRef);
+                await(isReady(namespace, nodeRef.podName()), operationTimeoutMs, TimeUnit.MILLISECONDS, e -> new FatalProblem("Error while waiting for non-restarted pod " + nodeRef.podName() + " to become ready", e));
+                LOGGER.debugCr(reconciliation, "Pod {} is now ready", nodeRef);
             }
         } catch (ForceableProblem e) {
             if (isPodStuck(pod) || restartContext.backOff.done() || e.forceNow) {
-                if (canRoll(podRef, 60_000, TimeUnit.MILLISECONDS, true, restartContext)) {
-                    LOGGER.warnCr(reconciliation, "Pod {} will be force-rolled, due to error: {}", podRef, e.getCause() != null ? e.getCause().getMessage() : e.getMessage());
+                if (canRoll(nodeRef, 60_000, TimeUnit.MILLISECONDS, true, restartContext)) {
+                    LOGGER.warnCr(reconciliation, "Pod {} will be force-rolled, due to error: {}", nodeRef, e.getCause() != null ? e.getCause().getMessage() : e.getMessage());
                     restartContext.restartReasons.add(RestartReason.POD_FORCE_RESTART_ON_ERROR);
                     restartAndAwaitReadiness(pod, operationTimeoutMs, TimeUnit.MILLISECONDS, restartContext);
                 } else {
-                    LOGGER.warnCr(reconciliation, "Pod {} can't be safely force-rolled; original error: ", podRef, e.getCause() != null ? e.getCause().getMessage() : e.getMessage());
+                    LOGGER.warnCr(reconciliation, "Pod {} can't be safely force-rolled; original error: ", nodeRef, e.getCause() != null ? e.getCause().getMessage() : e.getMessage());
                     throw e;
                 }
             } else {
@@ -437,15 +442,15 @@ public class KafkaRoller {
      * Dynamically update the broker config if the plan says we can.
      * Return true if the broker was successfully updated dynamically.
      */
-    private boolean maybeDynamicUpdateBrokerConfig(PodRef podRef, RestartContext restartContext) throws InterruptedException {
+    private boolean maybeDynamicUpdateBrokerConfig(NodeRef nodeRef, RestartContext restartContext) throws InterruptedException {
         boolean updatedDynamically;
 
         if (restartContext.needsReconfig) {
             try {
-                dynamicUpdateBrokerConfig(podRef, allClient, restartContext.diff, restartContext.logDiff);
+                dynamicUpdateBrokerConfig(nodeRef, allClient, restartContext.diff, restartContext.logDiff);
                 updatedDynamically = true;
             } catch (ForceableProblem e) {
-                LOGGER.debugCr(reconciliation, "Pod {} could not be updated dynamically ({}), will restart", podRef, e);
+                LOGGER.debugCr(reconciliation, "Pod {} could not be updated dynamically ({}), will restart", nodeRef, e);
                 updatedDynamically = false;
             }
         } else {
@@ -458,7 +463,7 @@ public class KafkaRoller {
      * Determine whether the pod should be restarted, or the broker reconfigured.
      */
     @SuppressWarnings("checkstyle:CyclomaticComplexity")
-    private void checkReconfigurability(PodRef podRef, Pod pod, RestartContext restartContext) throws ForceableProblem, InterruptedException, FatalProblem {
+    private void checkReconfigurability(NodeRef nodeRef, Pod pod, RestartContext restartContext) throws ForceableProblem, InterruptedException, FatalProblem {
 
         RestartReasons reasonToRestartPod = restartContext.restartReasons;
         boolean podStuck = pod != null
@@ -469,7 +474,7 @@ public class KafkaRoller {
                         && "Unschedulable".equals(ps.getReason())
                         && "False".equals(ps.getStatus()));
         if (podStuck) {
-            LOGGER.infoCr(reconciliation, "Pod {} needs to be restarted, because it seems to be stuck and restart might help", podRef);
+            LOGGER.infoCr(reconciliation, "Pod {} needs to be restarted, because it seems to be stuck and restart might help", nodeRef);
             restartContext.restartReasons.add(RestartReason.POD_STUCK);
         }
 
@@ -487,7 +492,7 @@ public class KafkaRoller {
         // Always get the broker config. This request gets sent to that specific broker, so it's a proof that we can
         // connect to the broker and that it's capable of responding.
         if (!initAdminClient()) {
-            LOGGER.infoCr(reconciliation, "Pod {} needs to be restarted, because it does not seem to responding to connection attempts", podRef);
+            LOGGER.infoCr(reconciliation, "Pod {} needs to be restarted, because it does not seem to responding to connection attempts", nodeRef);
             reasonToRestartPod.add(RestartReason.POD_UNRESPONSIVE);
             restartContext.needsRestart = false;
             restartContext.needsReconfig = false;
@@ -498,7 +503,7 @@ public class KafkaRoller {
         }
         Config brokerConfig;
         try {
-            brokerConfig = brokerConfig(podRef);
+            brokerConfig = brokerConfig(nodeRef);
         } catch (ForceableProblem e) {
             if (restartContext.backOff.done()) {
                 needsRestart = true;
@@ -509,16 +514,16 @@ public class KafkaRoller {
         }
 
         if (!needsRestart && allowReconfiguration) {
-            LOGGER.traceCr(reconciliation, "Pod {}: description {}", podRef, brokerConfig);
-            diff = new KafkaBrokerConfigurationDiff(reconciliation, brokerConfig, kafkaConfigProvider.apply(podRef.getPodId()), kafkaVersion, podRef.getPodId());
-            loggingDiff = logging(podRef);
+            LOGGER.traceCr(reconciliation, "Pod {}: description {}", nodeRef, brokerConfig);
+            diff = new KafkaBrokerConfigurationDiff(reconciliation, brokerConfig, kafkaConfigProvider.apply(nodeRef.nodeId()), kafkaVersion, nodeRef.nodeId());
+            loggingDiff = logging(nodeRef);
 
             if (diff.getDiffSize() > 0) {
                 if (diff.canBeUpdatedDynamically()) {
-                    LOGGER.debugCr(reconciliation, "Pod {} needs to be reconfigured.", podRef);
+                    LOGGER.debugCr(reconciliation, "Pod {} needs to be reconfigured.", nodeRef);
                     needsReconfig = true;
                 } else {
-                    LOGGER.infoCr(reconciliation, "Pod {} needs to be restarted, dynamic update cannot be done.", podRef);
+                    LOGGER.infoCr(reconciliation, "Pod {} needs to be restarted, dynamic update cannot be done.", nodeRef);
                     restartContext.restartReasons.add(RestartReason.CONFIG_CHANGE_REQUIRES_RESTART);
                     needsRestart = true;
                 }
@@ -526,11 +531,11 @@ public class KafkaRoller {
 
             // needsRestart value might have changed from the check in the parent if. So we need to check it again.
             if (!needsRestart && loggingDiff.getDiffSize() > 0) {
-                LOGGER.debugCr(reconciliation, "Pod {} logging needs to be reconfigured.", podRef);
+                LOGGER.debugCr(reconciliation, "Pod {} logging needs to be reconfigured.", nodeRef);
                 needsReconfig = true;
             }
         } else if (needsRestart) {
-            LOGGER.infoCr(reconciliation, "Pod {} needs to be restarted. Reason: {}", podRef, reasonToRestartPod.getAllReasonNotes());
+            LOGGER.infoCr(reconciliation, "Pod {} needs to be restarted. Reason: {}", nodeRef, reasonToRestartPod.getAllReasonNotes());
         }
 
         restartContext.needsRestart = needsRestart;
@@ -542,11 +547,11 @@ public class KafkaRoller {
 
     /**
      * Returns a config of the given broker.
-     * @param podRef The reference of the broker.
+     * @param nodeRef The reference of the broker.
      * @return a Future which completes with the config of the given broker.
      */
-    protected Config brokerConfig(PodRef podRef) throws ForceableProblem, InterruptedException {
-        ConfigResource resource = new ConfigResource(ConfigResource.Type.BROKER, String.valueOf(podRef.getPodId()));
+    protected Config brokerConfig(NodeRef nodeRef) throws ForceableProblem, InterruptedException {
+        ConfigResource resource = new ConfigResource(ConfigResource.Type.BROKER, String.valueOf(nodeRef.nodeId()));
         return await(Util.kafkaFutureToVertxFuture(reconciliation, vertx, allClient.describeConfigs(singletonList(resource)).values().get(resource)),
             30, TimeUnit.SECONDS,
             error -> new ForceableProblem("Error getting broker config", error)
@@ -566,37 +571,37 @@ public class KafkaRoller {
         );
     }
 
-    protected void dynamicUpdateBrokerConfig(PodRef podRef, Admin ac, KafkaBrokerConfigurationDiff configurationDiff, KafkaBrokerLoggingConfigurationDiff logDiff)
+    protected void dynamicUpdateBrokerConfig(NodeRef nodeRef, Admin ac, KafkaBrokerConfigurationDiff configurationDiff, KafkaBrokerLoggingConfigurationDiff logDiff)
             throws ForceableProblem, InterruptedException {
         Map<ConfigResource, Collection<AlterConfigOp>> updatedConfig = new HashMap<>(2);
-        var podId = podRef.podId;
+        var podId = nodeRef.nodeId();
         updatedConfig.put(Util.getBrokersConfig(podId), configurationDiff.getConfigDiff());
         updatedConfig.put(Util.getBrokersLogging(podId), logDiff.getLoggingDiff());
 
-        LOGGER.debugCr(reconciliation, "Updating broker configuration {}", podRef);
-        LOGGER.traceCr(reconciliation, "Updating broker configuration {} with {}", podRef, updatedConfig);
+        LOGGER.debugCr(reconciliation, "Updating broker configuration {}", nodeRef);
+        LOGGER.traceCr(reconciliation, "Updating broker configuration {} with {}", nodeRef, updatedConfig);
 
         AlterConfigsResult alterConfigResult = ac.incrementalAlterConfigs(updatedConfig);
         KafkaFuture<Void> brokerConfigFuture = alterConfigResult.values().get(Util.getBrokersConfig(podId));
         KafkaFuture<Void> brokerLoggingConfigFuture = alterConfigResult.values().get(Util.getBrokersLogging(podId));
         await(Util.kafkaFutureToVertxFuture(reconciliation, vertx, brokerConfigFuture), 30, TimeUnit.SECONDS,
             error -> {
-                LOGGER.errorCr(reconciliation, "Error updating broker configuration for pod {}", podRef, error);
-                return new ForceableProblem("Error updating broker configuration for pod " + podRef, error);
+                LOGGER.errorCr(reconciliation, "Error updating broker configuration for pod {}", nodeRef, error);
+                return new ForceableProblem("Error updating broker configuration for pod " + nodeRef, error);
             });
         await(Util.kafkaFutureToVertxFuture(reconciliation, vertx, brokerLoggingConfigFuture), 30, TimeUnit.SECONDS,
             error -> {
-                LOGGER.errorCr(reconciliation, "Error updating broker logging configuration pod {}", podRef, error);
-                return new ForceableProblem("Error updating broker logging configuration pod " + podRef, error);
+                LOGGER.errorCr(reconciliation, "Error updating broker logging configuration pod {}", nodeRef, error);
+                return new ForceableProblem("Error updating broker logging configuration pod " + nodeRef, error);
             });
 
-        LOGGER.infoCr(reconciliation, "Dynamic update of pod {} was successful.", podRef);
+        LOGGER.infoCr(reconciliation, "Dynamic update of pod {} was successful.", nodeRef);
     }
 
-    private KafkaBrokerLoggingConfigurationDiff logging(PodRef podRef)
+    private KafkaBrokerLoggingConfigurationDiff logging(NodeRef nodeRef)
             throws ForceableProblem, InterruptedException {
-        Config brokerLogging = brokerLogging(podRef.getPodId());
-        LOGGER.traceCr(reconciliation, "Pod {}: logging description {}", podRef, brokerLogging);
+        Config brokerLogging = brokerLogging(nodeRef.nodeId());
+        LOGGER.traceCr(reconciliation, "Pod {}: logging description {}", nodeRef, brokerLogging);
         return new KafkaBrokerLoggingConfigurationDiff(reconciliation, brokerLogging, kafkaLogging);
     }
 
@@ -618,7 +623,7 @@ public class KafkaRoller {
 
         @Override
         public String toString() {
-            /**
+            /*
              * This is a static nested class, so we want to prevent the Outer$Nested
              * name returned by getSimpleName()
              */
@@ -649,10 +654,10 @@ public class KafkaRoller {
         }
     }
 
-    private boolean canRoll(PodRef podRef, long timeout, TimeUnit unit, boolean ignoreSslError, RestartContext restartContext)
+    private boolean canRoll(NodeRef nodeRef, long timeout, TimeUnit unit, boolean ignoreSslError, RestartContext restartContext)
             throws ForceableProblem, InterruptedException {
         try {
-            return await(availability(allClient).canRoll(podRef.getPodId()), timeout, unit,
+            return await(availability(allClient).canRoll(nodeRef.nodeId()), timeout, unit,
                 t -> new ForceableProblem("An error while trying to determine the possibility of updating Kafka pods", t));
         } catch (ForceableProblem e) {
             // If we're not able to connect then roll
@@ -669,10 +674,10 @@ public class KafkaRoller {
      * Synchronously restart the given pod
      * by deleting it and letting it be recreated by K8s, then synchronously wait for it to be ready.
      *
-     * @param pod            The Pod to restart.
-     * @param timeout        The timeout.
-     * @param unit           The timeout unit.
-     * @param restartContext
+     * @param pod               The Pod to restart.
+     * @param timeout           The timeout.
+     * @param unit              The timeout unit.
+     * @param restartContext    Restart context
      */
     private void restartAndAwaitReadiness(Pod pod, long timeout, TimeUnit unit, RestartContext restartContext)
             throws InterruptedException, UnforceableProblem, FatalProblem {
@@ -697,7 +702,7 @@ public class KafkaRoller {
      * @param exceptionMapper A function for rethrowing exceptions.
      * @param <T> The result type
      * @param <E> The exception type
-     * @return The result of of the future
+     * @return The result of the future
      * @throws E The exception type returned from {@code exceptionMapper}.
      * @throws TimeoutException If the given future is not completed before the timeout.
      * @throws InterruptedException If the waiting was interrupted.
@@ -726,8 +731,9 @@ public class KafkaRoller {
      * Asynchronously delete the given pod, return a Future which completes when the Pod has been recreated.
      * Note: The pod might not be "ready" when the returned Future completes.
      *
-     * @param pod            The pod to be restarted
-     * @param restartContext
+     * @param pod               The pod to be restarted
+     * @param restartContext    Restart context
+     *
      * @return a Future which completes when the Pod has been recreated
      */
     protected Future<Void> restart(Pod pod, RestartContext restartContext) {
@@ -738,8 +744,8 @@ public class KafkaRoller {
     /**
      * Returns an AdminClient instance bootstrapped from the given pod.
      */
-    protected Admin adminClient(List<Integer> bootstrapPods, boolean ceShouldBeFatal) throws ForceableProblem, FatalProblem {
-        List<String> podNames = bootstrapPods.stream().map(this::podName).collect(Collectors.toList());
+    protected Admin adminClient(List<NodeRef> nodes, boolean ceShouldBeFatal) throws ForceableProblem, FatalProblem {
+        List<String> podNames = nodes.stream().map(node -> node.podName()).toList();
         try {
             String bootstrapHostnames = podNames.stream().map(podName -> DnsNameGenerator.podDnsName(namespace, KafkaResources.brokersServiceName(cluster), podName) + ":" + KafkaCluster.REPLICATION_PORT).collect(Collectors.joining(","));
             LOGGER.debugCr(reconciliation, "Creating AdminClient for {}", bootstrapHostnames);
@@ -759,32 +765,28 @@ public class KafkaRoller {
     protected KafkaAvailability availability(Admin ac) {
         return new KafkaAvailability(reconciliation, ac);
     }
-
-    String podName(int podId) {
-        return KafkaResources.kafkaPodName(this.cluster, podId);
-    }
     
     /**
-     * Return true if the given {@code podId} is the controller and there are other brokers we might yet have to consider.
+     * Return true if the given {@code nodeId} is the controller and there are other brokers we might yet have to consider.
      * This ensures that the controller is restarted/reconfigured last.
      */
-    private boolean deferController(PodRef podRef, RestartContext restartContext) throws Exception {
-        Integer controller = controller(podRef, operationTimeoutMs, TimeUnit.MILLISECONDS, restartContext);
+    private boolean deferController(NodeRef nodeRef, RestartContext restartContext) throws Exception {
+        int controller = controller(nodeRef, operationTimeoutMs, TimeUnit.MILLISECONDS, restartContext);
         int stillRunning = podToContext.reduceValuesToInt(100, v -> v.promise.future().isComplete() ? 0 : 1,
                 0, Integer::sum);
-        return controller == podRef.getPodId() && stillRunning > 1;
+        return controller == nodeRef.nodeId() && stillRunning > 1;
     }
 
     /**
      * Completes the returned future <strong>on the context thread</strong> with the id of the controller of the cluster.
      * This will be -1 if there is not currently a controller.
-     * @return A future which completes the the node id of the controller of the cluster,
-     * or -1 if there is not currently a controller.
+     *
+     * @return A future which completes the node id of the controller of the cluster, or -1 if there is not currently a controller.
      */
     @SuppressFBWarnings("RCN_REDUNDANT_NULLCHECK_WOULD_HAVE_BEEN_A_NPE") // seems to be completely spurious
-    int controller(PodRef podRef, long timeout, TimeUnit unit, RestartContext restartContext) throws Exception {
+    int controller(NodeRef nodeRef, long timeout, TimeUnit unit, RestartContext restartContext) throws Exception {
         // Don't use all allClient here, because it will have cache metadata about which is the controller.
-        try (Admin ac = adminClient(singletonList(podRef.getPodId()), false)) {
+        try (Admin ac = adminClient(singletonList(nodeRef), false)) {
             Node controllerNode = null;
             try {
                 DescribeClusterResult describeClusterResult = ac.describeCluster();
@@ -792,7 +794,7 @@ public class KafkaRoller {
                 controllerNode = controller.get(timeout, unit);
                 restartContext.clearConnectionError();
             } catch (ExecutionException | TimeoutException e) {
-                maybeTcpProbe(podRef, e, restartContext);
+                maybeTcpProbe(nodeRef, e, restartContext);
             }
             int id = controllerNode == null || Node.noNode().equals(controllerNode) ? -1 : controllerNode.id();
             LOGGER.debugCr(reconciliation, "Controller is {}", id);
@@ -805,19 +807,19 @@ public class KafkaRoller {
      * open on the broker; if it's not then maybe throw a ForceableProblem to immediately force a restart.
      * This is an optimization for brokers which don't seem to be running.
      */
-    private void maybeTcpProbe(PodRef podRef, Exception executionException, RestartContext restartContext) throws Exception {
-        if (restartContext.connectionError() + podList.size() * 120_000L >= System.currentTimeMillis()) {
+    private void maybeTcpProbe(NodeRef nodeRef, Exception executionException, RestartContext restartContext) throws Exception {
+        if (restartContext.connectionError() + nodes.size() * 120_000L >= System.currentTimeMillis()) {
             try {
-                LOGGER.debugCr(reconciliation, "Probing TCP port due to previous problems connecting to pod {}", podRef);
+                LOGGER.debugCr(reconciliation, "Probing TCP port due to previous problems connecting to pod {}", nodeRef);
                 // do a tcp connect and close (with a short connect timeout)
-                tcpProbe(DnsNameGenerator.podDnsName(namespace, KafkaResources.brokersServiceName(cluster), podRef.getPodName()), KafkaCluster.REPLICATION_PORT);
+                tcpProbe(DnsNameGenerator.podDnsName(namespace, KafkaResources.brokersServiceName(cluster), nodeRef.podName()), KafkaCluster.REPLICATION_PORT);
             } catch (IOException connectionException) {
-                throw new ForceableProblem("Unable to connect to " + podRef.getPodName() + ":" + KafkaCluster.REPLICATION_PORT, executionException.getCause(), true);
+                throw new ForceableProblem("Unable to connect to " + nodeRef.podName() + ":" + KafkaCluster.REPLICATION_PORT, executionException.getCause(), true);
             }
             throw executionException;
         } else {
             restartContext.noteConnectionError();
-            throw new ForceableProblem("Error while trying to determine the cluster controller from pod " + podRef.getPodName(), executionException.getCause());
+            throw new ForceableProblem("Error while trying to determine the cluster controller from pod " + nodeRef.podName(), executionException.getCause());
         }
     }
 
@@ -828,11 +830,8 @@ public class KafkaRoller {
      * @throws IOException if anything went wrong.
      */
     /*test*/ void tcpProbe(String hostname, int port) throws IOException {
-        Socket socket = new Socket();
-        try {
+        try (Socket socket = new Socket()) {
             socket.connect(new InetSocketAddress(hostname, port), 5_000);
-        } finally {
-            socket.close();
         }
     }
 
@@ -851,42 +850,5 @@ public class KafkaRoller {
                 LOGGER.warnCr(reconciliation, "Error waiting for pod {}/{} to become ready: {}", namespace, podName, error);
                 return Future.failedFuture(error);
             });
-    }
-
-    protected static class PodRef {
-
-        private final String podName;
-        private final int podId;
-
-        public PodRef(String podName, int podId) {
-            this.podName = podName;
-            this.podId = podId;
-        }
-
-        public String getPodName() {
-            return podName;
-        }
-
-        public int getPodId() {
-            return podId;
-        }
-
-        @Override
-        public String toString() {
-            return podName;
-        }
-
-        @Override
-        public boolean equals(Object o) {
-            if (this == o) return true;
-            if (o == null || getClass() != o.getClass()) return false;
-            PodRef podRef = (PodRef) o;
-            return Objects.equals(podName, podRef.podName);
-        }
-
-        @Override
-        public int hashCode() {
-            return Objects.hashCode(podName);
-        }
     }
 }
